--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-felipealfonsog.github.io
+README
+======
+
+Among the digital thicket, where branches intertwine and commits echo, lies the nexus of @felipealfonsog's digital abode. Seek not in the ether, but in the repository where stars align, code weaves its spell, and pages unfold their tale.
